--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
   "bugs": {
     "url": "https://github.com/arthais-systems/milk-api/issues"
   },
-  "homepage": "https://github.com/arthais-systems/milk-api#readme"
+  "homepage": "https://github.com/arthais-systems/milk-api#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^7.0.0"
+  }
 }
