--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Api para registrar o volume mensal de leite produzido, o preço mensal por litro de leite e o montante mensal recebido pelos produtores.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
