--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "set NODE_ENV=development && nodemon server.js"
+    "dev": "set NODE_ENV=development && nodemon --inspect server.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,8 @@
     "escape-string-regexp": "^5.0.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "http-errors": "^2.0.0",
+    "joi": "^17.8.3",
     "mongoose": "^7.0.0",
     "nodemon": "^2.0.21",
     "swagger-jsdoc": "^6.2.8",
